@@ -62,8 +62,8 @@ public:
 	virtual void getDirection(float *v) const;
 	virtual void setCone(float innerAngle, float outerAngle, float outerVolume);
 	virtual void getCone(float &innerAngle, float &outerAngle, float &outerVolume) const;
-	virtual void setRelativePosition(bool relative);
-	virtual bool hasRelativePosition() const;
+	virtual void setRelative(bool enable);
+	virtual bool isRelative() const;
 	void setLooping(bool looping);
 	bool isLooping() const;
 	bool isStatic() const;
@@ -86,7 +86,7 @@ private:
 	float coneInnerAngle;
 	float coneOuterAngle;
 	float coneOuterVolume;
-	bool relativePosition;
+	bool relative;
 	bool looping;
 	float minVolume;
 	float maxVolume;
